# Quant_Project

./: .gitignore  LICENSE  README.md  cluster.py  cluster1.py  cluster2.py  cluster3.py  cluster4.py  cluster5.py  cluster6.py  fx_cluster.py  master_all_prova.xlsx  pyproject.toml  requirements.txt  similarity_data.csv  similarity_data5.csv  ticker_list.csv  wrdsReturnDownloader.py
10X_DataSetup/: 10X_cleaner.py  fx_10X_cleaner.py  lista_ticker.py  provathreading.py  prthread2.py  sec_download_html.py
10X_Similarity/: controllo.py  fx_similarity.py  similarity_calculator.py
10X_Slitter/: splitter_10X.py  splitter_10X_single.py
10X_Splitter/: fx_splitter_10X.py  splitter_10X.py  splitter_10X_single.py
10X_txt/: 10X_cleaner.py  10X_splitter.py  10X_spltter_tc.py  import_prices.py  make_comps.py  make_lists.py  minimum_edit_distance.py  model.py  sec_download_html.py  sec_txt_cleaning.py  single_print_comps.py  splitter_10X.py  splitter_10X_single.py
DataSetup/: sec_download_html.py
DataSetup_10X/: 10X_cleaner.py  fx_10X_cleaner.py  sec_download_html.py
ML_Model/: merger.py  model.py  xlsxDataSetup.py
Models/: categoricalModel.py  model.py
Similarity_10X/: fx_similarity.py  similarity_calculator.py
Splitter_10X/: splitter_10X.py
clusterFiles/: cluster.py
createList/: company_list10k.py  deleteDeplicates.py
src/quant_project/DataSetup_10X/: 10X_cleaner.py  fx_10X_cleaner.py  sec_download_html.py
src/quant_project/ML_Model/: merger.py  wrdsReturnDownloader.py  xlsxDataSetup.py
src/quant_project/Models/: model.py  (+1 more)
src/risk_factor_pred/: consts.py
(+21 files in other folders)
